if(APPLE)
set(CMAKE_C_COMPILER gcc-4.7)
set(CMAKE_CXX_COMPILER g++-4.7)
endif()

project(Math)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)


SET(INTEL_ROOT_PATH /opt/intel)
SET(CUDA_ROOT_PATH /usr/local/cuda)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/include
  ${PROJECT_SOURCE_DIR}/../lapack/include
  ${PROJECT_SOURCE_DIR}/../magma/include
  ${PROJECT_SOURCE_DIR}/../magma/exp/quark/include
  ${PROJECT_SOURCE_DIR}/../magma/testing
  ${CUDA_ROOT_PATH}/include
)


LINK_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/lib
  ${PROJECT_SOURCE_DIR}/../lapack/lib
  ${PROJECT_SOURCE_DIR}/../magma/lib
  ${INTEL_ROOT_PATH}/lib/intel64
  ${INTEL_ROOT_PATH}/mkl/lib/intel64
  ${CUDA_ROOT_PATH}/lib64
  /usr/lib/nvidia-current
  )

if(CMAKE_COMPILER_IS_GNUCXX)
  if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
  endif()
  message("-- The CMAKE_BUILD_TYPE is " ${CMAKE_BUILD_TYPE})
endif()

ADD_SUBDIRECTORY(src lib)
ADD_SUBDIRECTORY(apps)