if(APPLE)
set(CMAKE_C_COMPILER gcc-4.7)
set(CMAKE_CXX_COMPILER g++-4.7)
endif()

PROJECT(network)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

if(WIN32)
  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../bin)
endif()
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/include
  ${PROJECT_SOURCE_DIR}/../math/include
  ${PROJECT_SOURCE_DIR}/../optimize/include
)

LINK_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/lib
  ${PROJECT_SOURCE_DIR}/../math/lib
  ${PROJECT_SOURCE_DIR}/../optimize/lib
  )

if(CMAKE_COMPILER_IS_GNUCXX)
  if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
  endif()
  message("-- The CMAKE_BUILD_TYPE is " ${CMAKE_BUILD_TYPE})
endif()

ADD_SUBDIRECTORY(src lib)
ADD_SUBDIRECTORY(apps)
