if(APPLE)
set(CMAKE_C_COMPILER gcc-4.7)
set(CMAKE_CXX_COMPILER g++-4.7)
endif()

PROJECT(optimize)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

if(WIN32)
  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../bin)
endif()
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)


INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/../math/include
)

LINK_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/lib
  ${PROJECT_SOURCE_DIR}/../math/lib
)

if(CMAKE_COMPILER_IS_GNUCXX)
  if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
  endif()
  message("-- The CMAKE_BUILD_TYPE is " ${CMAKE_BUILD_TYPE})
endif()


ADD_SUBDIRECTORY(src lib)
ADD_SUBDIRECTORY(apps)